# ssh2-rs

./: .appveyor-mingw-w64.sh  .gitignore  .gitmodules  .mailmap  .travis.yml  Cargo.toml  README.md  aliases.js  appveyor.yml  search-index.js  settings.html  source-files.js
.github/workflows/: linux.yml  macos.yml  windows.yml
libssh2-sys/: Cargo.toml  build.rs  lib.rs
libssh2-sys/libssh2-1.4.4-20140901/: Makefile.in  NEWS  aclocal.m4  config.sub  configure
libssh2-sys/libssh2-1.4.4-20140901/docs/: Makefile.in
libssh2-sys/libssh2-1.4.4-20140901/include/: libssh2.h
libssh2-sys/libssh2-1.4.4-20140901/tests/: Makefile.in
libssh2-sys/libssh2-1.5.0/: NEWS  configure
libssh2-sys/libssh2-1.5.0/docs/: Makefile.in
libssh2-sys/libssh2-1.5.0/example/: libssh2_config.h.in
libssh2-sys/libssh2-1.5.0/src/: libssh2_config.h.in
libssh2-sys/libssh2-1.5.0/win32/: libssh2.dsp
libssh2_sys/: constant.LIBSSH2_CHANNEL_EXTENDED_DATA_IGNORE.html  constant.LIBSSH2_CHANNEL_EXTENDED_DATA_MERGE.html  constant.LIBSSH2_CHANNEL_EXTENDED_DATA_NORMAL.html  constant.LIBSSH2_CHANNEL_PACKET_DEFAULT.html  constant.LIBSSH2_CHANNEL_WINDOW_DEFAULT.html  constant.LIBSSH2_ERROR_AGENT_PROTOCOL.html  constant.LIBSSH2_ERROR_ALLOC.html  constant.LIBSSH2_ERROR_AUTHENTICATION_FAILED.html  constant.LIBSSH2_ERROR_BAD_SOCKET.html  constant.LIBSSH2_ERROR_BAD_USE.html  constant.LIBSSH2_ERROR_BANNER_RECV.html  constant.LIBSSH2_ERROR_BANNER_SEND.html  constant.LIBSSH2_ERROR_BUFFER_TOO_SMALL.html  constant.LIBSSH2_ERROR_CHANNEL_CLOSED.html  constant.LIBSSH2_ERROR_CHANNEL_EOF_SENT.html  constant.LIBSSH2_ERROR_CHANNEL_FAILURE.html  constant.LIBSSH2_ERROR_CHANNEL_OUTOFORDER.html  constant.LIBSSH2_ERROR_CHANNEL_PACKET_EXCEEDED.html  constant.LIBSSH2_ERROR_CHANNEL_REQUEST_DENIED.html  constant.LIBSSH2_ERROR_CHANNEL_UNKNOWN.html  constant.LIBSSH2_ERROR_CHANNEL_WINDOW_EXCEEDED.html  constant.LIBSSH2_ERROR_COMPRESS.html  constant.LIBSSH2_ERROR_DECRYPT.html  constant.LIBSSH2_ERROR_EAGAIN.html  constant.LIBSSH2_ERROR_ENCRYPT.html  constant.LIBSSH2_ERROR_FILE.html  constant.LIBSSH2_ERROR_HOSTKEY_INIT.html  constant.LIBSSH2_ERROR_HOSTKEY_SIGN.html  constant.LIBSSH2_ERROR_INVAL.html  constant.LIBSSH2_ERROR_INVALID_MAC.html  constant.LIBSSH2_ERROR_INVALID_POLL_TYPE.html  constant.LIBSSH2_ERROR_KEX_FAILURE.html  constant.LIBSSH2_ERROR_KEY_EXCHANGE_FAILURE.html  constant.LIBSSH2_ERROR_KNOWN_HOSTS.html  constant.LIBSSH2_ERROR_METHOD_NONE.html  constant.LIBSSH2_ERROR_METHOD_NOT_SUPPORTED.html  constant.LIBSSH2_ERROR_OUT_OF_BOUNDARY.html  constant.LIBSSH2_ERROR_PASSWORD_EXPIRED.html  constant.LIBSSH2_ERROR_PROTO.html  constant.LIBSSH2_ERROR_PUBLICKEY_PROTOCOL.html  (+215 more)
src/: agent.rs  channel.rs  error.rs  knownhosts.rs  lib.rs  listener.rs  raw.rs  session.rs  sftp.rs  util.rs
src/libssh2_sys/: lib.rs.html
src/ssh2/: agent.rs.html  channel.rs.html  error.rs.html  knownhosts.rs.html  lib.rs.html  listener.rs.html  session.rs.html  sftp.rs.html  util.rs.html
ssh2/: all.html  enum.CheckResult.html  enum.DisconnectCode.html  enum.ExtendedData.html  enum.HashType.html  enum.HostKeyType.html  enum.KnownHostFileKind.html  enum.KnownHostKeyFormat.html  enum.MethodType.html  enum.OpenType.html  fn.init.html  index.html  sidebar-items.js  static.EXTENDED_DATA_STDERR.html  static.FLUSH_ALL.html  static.FLUSH_EXTENDED_DATA.html  struct.Agent.html  struct.Channel.html  struct.Error.html  struct.ExitSignal.html  struct.File.html  struct.FileStat.html  struct.FileType.html  struct.Host.html  struct.Hosts.html  struct.Identities.html  struct.KnownHosts.html  struct.Listener.html  struct.OpenFlags.html  struct.Prompt.html  struct.PublicKey.html  struct.ReadWindow.html  struct.RenameFlags.html  struct.ScpFileStat.html  struct.Session.html  struct.Sftp.html  struct.Stream.html  struct.WriteWindow.html  trait.KeyboardInteractivePrompt.html
ssh2/agent/: struct.Agent.html  struct.Identities.html  struct.PublicKey.html
ssh2/channel/: struct.Channel.html  struct.ExitSignal.html  (+3 more)
systest/: Cargo.toml  build.rs
tests/: agent.rs  all.rs  banner  channel.rs  knownhosts.rs  run_integration_tests.sh  session.rs  sftp.rs  tempdir.rs
(+61 files in other folders)
