[package]
name = "ssh2"
version = "0.8.0"
authors = ["Alex Crichton <alex@alexcrichton.com>", "Wez Furlong <wez@wezfurlong.org>"]
license = "MIT/Apache-2.0"
keywords = ["ssh"]
readme = "README.md"
repository = "https://github.com/alexcrichton/ssh2-rs"
homepage = "https://github.com/alexcrichton/ssh2-rs"
documentation = "https://docs.rs/ssh2"
description = """
Bindings to libssh2 for interacting with SSH servers and executing remote
commands, forwarding local ports, etc.
"""

[features]
vendored-openssl = ["libssh2-sys/vendored-openssl"]

[dependencies]
bitflags = "1.2"
libc = "0.2"
libssh2-sys = { path = "libssh2-sys", version = "0.2.15" }
parking_lot = "0.10"

[dev-dependencies]
tempdir = "0.3"

[workspace]
members = ['systest']
