[package]
name = "libssh2-sys"
version = "0.2.5"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "ssh2"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/ssh2-rs"
description = "Native bindings to the libssh2 library"

[lib]
name = "libssh2_sys"
path = "lib.rs"

[dependencies]
libz-sys = ">= 0"
libc = "0.2"

[target."cfg(unix)".dependencies]
openssl-sys = "0.9"

[build-dependencies]
metadeps = "1"
cmake = "0.1.2"

[package.metadata.pkg-config]
libssh2 = "1.7.0"
