[package]
name = "libssh2-sys"
version = "0.2.11"
authors = ["Alex Crichton <alex@alexcrichton.com>"]
links = "ssh2"
build = "build.rs"
license = "MIT/Apache-2.0"
repository = "https://github.com/alexcrichton/ssh2-rs"
description = "Native bindings to the libssh2 library"

[lib]
name = "libssh2_sys"
path = "lib.rs"

[dependencies]
libz-sys = "1.0.21"
libc = "0.2"

[target."cfg(unix)".dependencies]
openssl-sys = "0.9.35"

[build-dependencies]
pkg-config = "0.3.11"
cc = "1.0.25"

[target.'cfg(target_env = "msvc")'.build-dependencies]
vcpkg = "0.2"
